Setting up main layout, failover on old searches, paging, etc...

--- a/HausMietenFinder/public/css/commons/borders.less
+++ b/HausMietenFinder/public/css/commons/borders.less
@@ -5,3 +5,20 @@
     border-right:0;
     border-top:0;
 }
+/* Right */
+.border-right
+{
+	border-right:1px solid #aaa;
+}
+
+/* Top */
+.border-top
+{
+	border-top:1px solid #aaa;
+}
+
+/* Border */
+.border-bottom
+{
+	border-bottom:1px solid #aaa;
+}
