--- a/HausMietenFinder/public/css/commons/fonts.less
+++ b/HausMietenFinder/public/css/commons/fonts.less
@@ -1,4 +1,5 @@
-﻿.font10 {font-size:10px;}
+﻿/* Fonts */
+.font10 {font-size:10px;}
 .font12 {font-size:12px;}
 .font13 {font-size:13px;}
 .font14 {font-size:14px;}
