--- a/HausMietenFinder/public/css/commons/paddings.less
+++ b/HausMietenFinder/public/css/commons/paddings.less
@@ -1,5 +1,7 @@
 ﻿/* Full */
 .pfull20 {padding: 20px;}
+.pfull10 {padding: 10px;}
+.pfull5 {padding: 5px;}
 
 /* Bottom */
 .pbottom0 {padding-bottom:0;}
