--- a/HausMietenFinder/public/css/core/layout.less
+++ b/HausMietenFinder/public/css/core/layout.less
@@ -1,6 +1,6 @@
 body
 {
-	background:#f0f0f0;
+	background:  url('${images_url}gray_sand.png');
 }
 
 header
@@ -27,4 +27,9 @@ footer
 	position:fixed;
 	bottom:0;
 	width:100%;
+}
+
+.main-container-inner
+{
+	padding-bottom:70px;
 }
