Minor bug fixes and adding from-private badge

--- a/HausMietenFinder/public/css/commons/paddings.less
+++ b/HausMietenFinder/public/css/commons/paddings.less
@@ -5,6 +5,7 @@
 
 /* Bottom */
 .pbottom0 {padding-bottom:0;}
+.pbottom10 {padding-bottom:10px;}
 .pbottom15 {padding-bottom:15px;}
 .pbottom20 {padding-bottom:20px;}
 
