Minor UI tuning

--- a/HausMietenFinder/public/css/views/houses/search.less
+++ b/HausMietenFinder/public/css/views/houses/search.less
@@ -28,6 +28,9 @@
 				top:10px;
 				position:absolute;
 				font-size:24px;
+				padding:2px 4px;
+				background:#fff;
+				border:1px solid #090;
 			}
 
 			.choices-container
@@ -67,6 +70,9 @@
 
 		.shortlisted
 		{
+			background:#dff0d8;
+			border:3px solid #0a0;
+
 			.checked
 			{
 				display: block;
